--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "local": "PORT=3000 node index.js",
+    "local": "PORT=3000 nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
