--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Davidyoon",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15"
   },
   "engines": {
     "node": "17.2.0",
