--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "stockserver",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "index.js",
+  "engines": {
+    "node": "18.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "local": "PORT=3000 nodemon index.js",
