--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "engines": {
-    "node": "18.2.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "local": "PORT=3000 nodemon index.js",
-    "start": "node index.js"
+    "local": "PORT=3000 nodemon src/main.js",
+    "start": "node src/main.js"
   },
-  "keywords": [],
-  "author": "Davidyoon",
-  "license": "MIT",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/supertest": "^2.0.12",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.1",
+    "supertest": "^6.2.2",
+    "typescript": "^4.6.3"
+  },
   "dependencies": {
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
