--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,6 @@
 {
-    "compilerOptions": {
-        "strict": true
-    },
-    "include": [
-        "src/**/*"
-    ]
+  "compilerOptions": {
+    "strict": true
+  },
+  "include": ["src/**/*"]
 }
