--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "yahoo-finance2": "^2.3.10"
   }
 }
