--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "mine": "^0.1.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.5.4",
     "yahoo-finance2": "^2.3.10"
