--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mime": "^3.0.0",
