--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
     "nodemon": "^2.0.15",
     "socket.io": "^4.5.4",
     "yahoo-finance2": "^2.3.10"
-  }
+  },
+  "builds": [
+    {
+      "src": "main.js",
+      "use": "@vercel/node"
+    }
+  ]
 }
